tests/badtoken.err
3: error: '{' expected
	while(true) }
	            ^
